--- a/_posts/2020-7-6-covid.md
+++ b/_posts/2020-7-6-covid.md
@@ -4,14 +4,14 @@ date: 2020-07-06 00:00:00 Z
 categories:
 authors: MGGG
 featured: false
-permalink: /covid
+permalink: /covidblog
 ---
 
 At the MGGG Redistricting Lab, our team includes expertise in math modeling, geospatial data, and app development.
 We have a RAPID grant from the National Science Foundation to support planning related to Campus Coronavirus Response and have launched several component projects.
 
 ### Spatial Match
-* There are numerous applications for making a travel-minimizing spatial match from hospitals and labs to college campuses. In March, we built 
+* There are numerous applications for making a travel-minimizing spatial match from hospitals and labs to college campuses. In March, we built
 a [spatial match tool](https://mggg.org/covid-flows/) that connects hospitals to nearby college campuses. At the time, the intended use case was to relieve the bed strain on hospitals. As we plan for Fall, the same model can be used to match campuses to nearby CLIA-certified labs to do their COVID testing.
 
 ### Testing Frequency Calculator
